--- a/style.css
+++ b/style.css
@@ -5,22 +5,22 @@
     src: url(fontes/idroid.otf);
 }
 /*Variavel*/
-:root{
-    --cor1:#00FF00;
-    --cor2:#00E600;
-    --cor3:#00BF00;
-    --cor4:#008000;
-    --cor5:#005000;
+:root {
+    --cor1: #00ff00;
+    --cor2: #00e600;
+    --cor3: #00bf00;
+    --cor4: #008000;
+    --cor5: #005000;
 }
 /*Corpo*/
-body{
-    background-color: lightgreen;  
+body {
+    background-color: lightgreen;
     margin: 0px;
-    padding: 0px;  
+    padding: 0px;
 }
 /*Cabeçalho*/
-header{
-    background-image: linear-gradient(to bottom,var(--cor3),var(--cor5));
+header {
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     color: white;
     text-align: center;
     text-shadow: 1px 1px 2px black;
@@ -29,107 +29,105 @@ header{
     padding-top: 10px;
 }
 /*Titulo do cabeçalho*/
-header>h1{
+header > h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
 /*paragrafo do cabeçalho*/
-header>p{
+header > p {
     display: block;
     padding-top: 1em;
     width: 400px;
     margin: auto;
 }
 /*barra de navegação*/
-nav{
+nav {
     background-color: var(--cor5);
 }
 /*links da barra de navegação*/
-nav>a{
-    color:white;
+nav > a {
+    color: white;
     text-decoration: none;
     padding-right: 7px;
 }
 /*animação da barra ao passar o mouse*/
-nav>a:hover{
+nav > a:hover {
     text-decoration: underline;
     color: var(--cor1);
     text-shadow: 1px 1px 2px var(--cor1);
 }
 /*conteudo principal*/
-main{
+main {
     background-color: white;
     margin: auto;
     padding-top: 10px;
     min-width: 400px;
-    max-width:1050px;
+    max-width: 1050px;
     border-radius: 0px 0px 10px 10px;
 }
 /*titulo do conteudo principal*/
-main>h1{
+main > h1 {
     font-family: droid;
     padding-left: 10px;
     color: var(--cor4);
 }
 /*Subtitulo do conteudo principal*/
-main>h2{
+main > h2 {
     font-family: droid;
     padding-left: 10px;
     color: var(--cor4);
-    background-image: linear-gradient(to right,var(--cor1), transparent);
+    background-image: linear-gradient(to right, var(--cor1), transparent);
 }
 /*paragrafo do conteudo principal*/
-main>p{
+main > p {
     text-align: justify;
-    padding:20px;
+    padding: 20px;
     text-indent: 25px;
-    border-radius:0px 0px 10px 10px;   
 }
 /*imagens*/
-main>picture>img{
+main > picture > img {
     display: block;
     margin: auto;
 }
 /*video*/
-main>div{
+main > div {
     background-color: var(--cor5);
-    margin: 30px 0px 30px 0px;
+    margin: 30px 0px;
     position: relative;
     padding-bottom: 50%;
 }
-main>div>iframe{
+main > div > iframe {
     position: absolute;
-    top:5%;
-    left:5%;
-    width:90%;
-    height:90%;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
 }
 /*extra*/
-main>aside{
+main > aside {
     margin: 20px;
     border-radius: 10px 10px 0px 0px;
     background-color: var(--cor1);
     text-align: justify;
 }
 /*titulo extra*/
-main>aside>h1{
-background-color: var(--cor4);
-border-radius: 10px 10px 0px 0px;
-padding: 7px;
+main > aside > h1 {
+    background-color: var(--cor4);
+    border-radius: 10px 10px 0px 0px;
+    padding: 7px;
 }
 /*lista*/
-main>Aside>ul{
+main > Aside > ul {
     list-style-position: inside;
-    columns:2;
-    list-style-type:'\2714\00a0\0020';
+    columns: 2;
+    list-style-type: "\2714\00a0\0020";
 }
 /*paragrafo extra*/
-aside>p{
+aside > p {
     padding: 0px 10px 10px 10px;
 }
-footer{
+footer {
     background-color: var(--cor5);
     color: white;
     padding: 1px;
     text-align: center;
 }
-
